added: choose between three default underline color sets

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -64,6 +64,10 @@ guiOOoChangeLanguageMatch = F\u00fcr den unterstrichenen Text
 guiOOoChangeLanguageParagraph = F\u00fcr den Absatz
 guiSelectionCheckComplete = LanguageTool-Pr\u00fcfung des selektierten Textes ist beendet.
 guiUserProfile = Standardprofil
+guiColorSelectionLabel = Standard Unterstreichungsfarben
+guiWTColorPallette = WritingTool Farben
+guiBlueColorPallette = Blaue Farbt\u00f6ne
+guiLTColorPallette = LanguageTool Farben
 guiUseLongMessages = Zeige lange Nachrichten in Kontextmenü
 guiSpellCheckerWarning = Heap-Speicherplatz zu klein: Die LanguageTool-Rechtschreibpr\u00fcfung wird nicht verwendet.\nSetzen Sie den Heap-Speicherplatz auf mindestens 1024 MB, um die LanguageTool-Rechtschreibpr\u00fcfung zu verwenden.
 guiAiSupportSettings = KI Unterst\u00fctzung
