ai direct instruction first step

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -94,6 +94,8 @@ loAiWaitDialogMessage = Bitte warten Sie, bis die KI Ihre Anfrage bearbeitet hat
 loAiRuleDescription = KI Fehler Erkennung
 loAiRuleMessage = Die KI schl\u00e4gt folgende Korrektur vor
 loAiDialogTitle = KI Dialog
+loAiDialogTabParagraph = Absatzbearbeitung
+loAiDialogTabInstruction = Direkte Anweisung
 loAiDialogInstructionLabel = Anweisung
 loAiDialogParagraphLabel = Zu bearbeitender Text
 loAiDialogResultLabel = KI generierter Text
