--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -94,6 +94,8 @@ loAiWaitDialogMessage = Please wait until the AI has completed your request.\nTh
 loAiRuleDescription = AI error detection
 loAiRuleMessage = The AI suggests the following correction
 loAiDialogTitle = AI Dialog
+loAiDialogTabParagraph = Paragraph editing
+loAiDialogTabInstruction = Direct instruction
 loAiDialogInstructionLabel = Instruction
 loAiDialogParagraphLabel = Text to be edited
 loAiDialogResultLabel = AI generated text
