ai result dialog first step

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -87,6 +87,7 @@ guiAiText = Text
 guiAiImages = Bilder 
 loMenuAiAddErrorMarks = KI: Erkannte Fehler hinzuf\u00fcgen 
 loMenuAiGeneralCommand = KI: Allgemeine Absatz \u00c4nderungen
+loMenuAiStyleCommand = KI: \u00dcberarbeite Absatz stilistisch
 loMenuAiGeneralCommandTitle = Anweisungseingabe
 loMenuAiGeneralCommandMessage = Geben Sie einen beliebigen Befehl ein, um den Absatz zu bearbeiten
 loAiWaitDialogTitle = Bitte warten
@@ -121,7 +122,10 @@ loAiDialogImgInsertButton = Einsetzen
 loAiDialogImgSaveTitle = Speichere Bild in Datei
 loAiDialogImgSaveErrorMsg = Grafikformat nicht unterst\u00fctzt.\nW\u00e4hle alas Dateiendung png, jpg oder gif
 loAiCorrectInstruction = Gebe den grammatikalisch und orthografisch korrigierten Text aus
-loAiServerConnectionError = Fehler in der Verbindung zum KI-Server. KI-Unterstürtzung wird ausgeschaltet.\n Für weitere Details siehe log-Datei. 
+loAiStyleInstruction = Gebe den stilistisch verbesserten Text aus
+loAiServerConnectionError = Fehler in der Verbindung zum KI-Server. KI-Unterst\u00fctzung wird ausgeschaltet.\n F\u00fcr weitere Details siehe log-Datei. 
+loAiResultDialogTitle = KI Ergebnis
+loAiResultOverrideButton = \u00dcbernehmen
 guiUColorStyleLabel = Farbe und Stil f\u00fcr Unterstreichungen:
 guiUColorChange = \u00c4ndern...
 guiUColorDefault = Standard
