--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -87,10 +87,11 @@ guiAiText = Text
 guiAiImages = Images 
 loMenuAiAddErrorMarks = AI: Add detected errors
 loMenuAiGeneralCommand = AI: General paragraph changes
+loMenuAiStyleCommand = AI: Revise paragraph stylistically
 loMenuAiGeneralCommandTitle = Command input
 loMenuAiGeneralCommandMessage = Enter any command to manipulate the paragraph
 loAiWaitDialogTitle = Please Wait
-loAiWaitDialogMessage = Please wait until the AI has completed your request.\nThis may take some time depending on the workload.
+loAiWaitDialogMessage = Please wait until the AI has completed your request. \nThis may take some time depending on the workload.
 loAiRuleDescription = AI error detection
 loAiRuleMessage = The AI suggests the following correction
 loAiDialogTitle = AI Dialog
@@ -121,7 +122,10 @@ loAiDialogImgInsertButton = Insert
 loAiDialogImgSaveTitle = Save Image to File
 loAiDialogImgSaveErrorMsg = Image format not supported.\nChoose file extension png, jpg or gif
 loAiCorrectInstruction = Output the grammatically and orthographically corrected text
+loAiStyleInstruction = Output the stylistically improved text
 loAiServerConnectionError = Error connecting to AI server. AI support will be disabled.\n See log file for more details.
+loAiResultDialogTitle = AI Result
+loAiResultOverrideButton = Copy
 guiUColorStyleLabel = Underline style and color:
 guiUColorChange = Change
 guiUColorDefault = Default
