menues for ai support changed

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -85,9 +85,12 @@ guiAiGrammarErrorColor = Von der KI festgestellte Grammatikfehler
 guiAiStylisticErrorColor = Von der KI festgestellte stilistische Hinweise 
 guiAiText = Text 
 guiAiImages = Bilder 
+loMenuAiSupport = KI Unterst\u00fctzung
 loMenuAiAddErrorMarks = KI: Erkannte Fehler hinzuf\u00fcgen 
 loMenuAiGeneralCommand = KI: Allgemeine Absatz \u00c4nderungen
 loMenuAiStyleCommand = KI: \u00dcberarbeite Absatz stilistisch
+loMenuAiReformulateCommand = KI: Formuliere Absatz um
+loMenuAiExpandCommand = KI: Erweitere Absatz
 loMenuAiGeneralCommandTitle = Anweisungseingabe
 loMenuAiGeneralCommandMessage = Geben Sie einen beliebigen Befehl ein, um den Absatz zu bearbeiten
 loAiWaitDialogTitle = Bitte warten
