--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -84,10 +84,13 @@ guiAiQualityHint = The speed and quality of the results depends on the installat
 guiAiGrammarErrorColor = AI detected grammar error 
 guiAiStylisticErrorColor = AI detected stylistic hints 
 guiAiText = Text 
-guiAiImages = Images 
+guiAiImages = Images
+loMenuAiSupport = AI Support
 loMenuAiAddErrorMarks = AI: Add detected errors
 loMenuAiGeneralCommand = AI: General paragraph changes
 loMenuAiStyleCommand = AI: Revise paragraph stylistically
+loMenuAiReformulateCommand = AI: Reformulate paragraph
+loMenuAiExpandCommand = AI: Expand paragraph
 loMenuAiGeneralCommandTitle = Command input
 loMenuAiGeneralCommandMessage = Enter any command to manipulate the paragraph
 loAiWaitDialogTitle = Please Wait
