--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -127,6 +127,10 @@ loAiDialogImgSaveErrorMsg = Image format not supported.\nChoose file extension p
 loAiServerConnectionError = Error connecting to AI server. AI support will be disabled.\n See log file for more details.
 loAiResultDialogTitle = AI Result
 loAiResultOverrideButton = Copy
+loAiLanguageDialogTitle = Translate
+loAiDialogLanguageLabel = Translate into
+loAiDialogTranslateButton = Translate
+
 guiUColorStyleLabel = Underline style and color:
 guiUColorChange = Change
 guiUColorDefault = Default
