enhancement of translate dialog

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -91,6 +91,7 @@ loMenuAiGeneralCommand = KI: Allgemeine Absatz \u00c4nderungen
 loMenuAiStyleCommand = KI: \u00dcberarbeite Absatz stilistisch
 loMenuAiReformulateCommand = KI: Formuliere Absatz um
 loMenuAiExpandCommand = KI: Erweitere Absatz
+loMenuAiTranslateCommand = KI: \u00dcbersetze Dokument
 loMenuAiGeneralCommandTitle = Anweisungseingabe
 loMenuAiGeneralCommandMessage = Geben Sie einen beliebigen Befehl ein, um den Absatz zu bearbeiten
 loAiWaitDialogTitle = Bitte warten
@@ -127,6 +128,11 @@ loAiDialogImgSaveErrorMsg = Grafikformat nicht unterst\u00fctzt.\nW\u00e4hle ala
 loAiServerConnectionError = Fehler in der Verbindung zum KI-Server. KI-Unterst\u00fctzung wird ausgeschaltet.\n F\u00fcr weitere Details siehe log-Datei. 
 loAiResultDialogTitle = KI Ergebnis
 loAiResultOverrideButton = \u00dcbernehmen
+loAiTranslationDialogTitle = KI \u00dcbersetzung
+loAiDialogLanguageLabel = \u00dcbersetzen in
+loAiDialogTranslateButton = \u00dcbersetzen
+loAiDialogTranslateFreedom = Freiheit der \u00dcbersetzung
+
 guiUColorStyleLabel = Farbe und Stil f\u00fcr Unterstreichungen:
 guiUColorChange = \u00c4ndern...
 guiUColorDefault = Standard
