--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -91,6 +91,7 @@ loMenuAiGeneralCommand = AI: General paragraph changes
 loMenuAiStyleCommand = AI: Revise paragraph stylistically
 loMenuAiReformulateCommand = AI: Reformulate paragraph
 loMenuAiExpandCommand = AI: Expand paragraph
+loMenuAiTranslateCommand = AI: Translate document
 loMenuAiGeneralCommandTitle = Command input
 loMenuAiGeneralCommandMessage = Enter any command to manipulate the paragraph
 loAiWaitDialogTitle = Please Wait
@@ -127,9 +128,10 @@ loAiDialogImgSaveErrorMsg = Image format not supported.\nChoose file extension p
 loAiServerConnectionError = Error connecting to AI server. AI support will be disabled.\n See log file for more details.
 loAiResultDialogTitle = AI Result
 loAiResultOverrideButton = Copy
-loAiLanguageDialogTitle = Translate
+loAiTranslationDialogTitle = AI Translation
 loAiDialogLanguageLabel = Translate into
 loAiDialogTranslateButton = Translate
+loAiDialogTranslateFreedom = Freedom of translation
 
 guiUColorStyleLabel = Underline style and color:
 guiUColorChange = Change
