TTS-Support: first step

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -84,7 +84,8 @@ guiAiQualityHint = Die Geschwindigkeit und Qualit\u00e4t der Ergebnisse h\u00e4n
 guiAiGrammarErrorColor = Von der KI festgestellte Grammatikfehler 
 guiAiStylisticErrorColor = Von der KI festgestellte stilistische Hinweise 
 guiAiText = Text 
-guiAiImages = Bilder 
+guiAiImages = Bilder
+guiAiTextToSpeech = Text zu Sprache
 loMenuAiSupport = KI Unterst\u00fctzung
 loMenuAiAddErrorMarks = KI: Erkannte Fehler hinzuf\u00fcgen 
 loMenuAiGeneralCommand = KI: Allgemeine Absatz \u00c4nderungen
@@ -92,6 +93,7 @@ loMenuAiStyleCommand = KI: \u00dcberarbeite Absatz stilistisch
 loMenuAiReformulateCommand = KI: Formuliere Absatz um
 loMenuAiExpandCommand = KI: Erweitere Absatz
 loMenuAiTranslateCommand = KI: \u00dcbersetze Dokument
+loMenuAiTextToSpeechCommand = KI: Dokument zu Sprache
 loMenuAiGeneralCommandTitle = Anweisungseingabe
 loMenuAiGeneralCommandMessage = Geben Sie einen beliebigen Befehl ein, um den Absatz zu bearbeiten
 loAiWaitDialogTitle = Bitte warten
