--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -85,6 +85,7 @@ guiAiGrammarErrorColor = AI detected grammar error
 guiAiStylisticErrorColor = AI detected stylistic hints 
 guiAiText = Text 
 guiAiImages = Images
+guiAiTextToSpeech = Text to speech
 loMenuAiSupport = AI Support
 loMenuAiAddErrorMarks = AI: Add detected errors
 loMenuAiGeneralCommand = AI: General paragraph changes
@@ -92,6 +93,7 @@ loMenuAiStyleCommand = AI: Revise paragraph stylistically
 loMenuAiReformulateCommand = AI: Reformulate paragraph
 loMenuAiExpandCommand = AI: Expand paragraph
 loMenuAiTranslateCommand = AI: Translate document
+loMenuAiTextToSpeechCommand = AI: document to speech
 loMenuAiGeneralCommandTitle = Command input
 loMenuAiGeneralCommandMessage = Enter any command to manipulate the paragraph
 loAiWaitDialogTitle = Please Wait
