--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -68,7 +68,8 @@ guiColorSelectionLabel = Standard Unterstreichungsfarben
 guiWTColorPallette = WritingTool Farben
 guiBlueColorPallette = Blaue Farbt\u00f6ne
 guiLTColorPallette = LanguageTool Farben
-guiUseLongMessages = Zeige lange Nachrichten in Kontextmenü
+guiDarkColorPallette = Farben f\u00fcr dunklen Hintergrund
+guiUseLongMessages = Zeige lange Nachrichten in Kontextmen\u00fc
 guiSpellCheckerWarning = Heap-Speicherplatz zu klein: Die LanguageTool-Rechtschreibpr\u00fcfung wird nicht verwendet.\nSetzen Sie den Heap-Speicherplatz auf mindestens 1024 MB, um die LanguageTool-Rechtschreibpr\u00fcfung zu verwenden.
 guiAiSupportSettings = KI Unterst\u00fctzung
 guiUseAiSupport = Nutze KI Unterst\u00fctzung
