support for custom default colors added / Solves issue #26

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -65,10 +65,14 @@ guiOOoChangeLanguageParagraph = F\u00fcr den Absatz
 guiSelectionCheckComplete = LanguageTool-Pr\u00fcfung des selektierten Textes ist beendet.
 guiUserProfile = Standardprofil
 guiColorSelectionLabel = Standard Unterstreichungsfarben
-guiWTColorPallette = WritingTool Farben
-guiBlueColorPallette = Blaue Farbt\u00f6ne
-guiLTColorPallette = LanguageTool Farben
-guiDarkColorPallette = Farben f\u00fcr dunklen Hintergrund
+guiWTColorPalette = WritingTool Farben
+guiBlueColorPalette = Blaue Farbt\u00f6ne
+guiLTColorPalette = LanguageTool Farben
+guiDarkColorPalette = Farben f\u00fcr dunklen Hintergrund
+guiCustomColorPalete = Benutzerdefinierte Farben
+guiCustomColorGrammar = Grammatikregeln
+guiCustomColorStyle = Stilregeln
+guiCustomColorOptional = Optionale Regeln
 guiUseLongMessages = Zeige lange Nachrichten in Kontextmen\u00fc
 guiSpellCheckerWarning = Heap-Speicherplatz zu klein: Die LanguageTool-Rechtschreibpr\u00fcfung wird nicht verwendet.\nSetzen Sie den Heap-Speicherplatz auf mindestens 1024 MB, um die LanguageTool-Rechtschreibpr\u00fcfung zu verwenden.
 guiAiSupportSettings = KI Unterst\u00fctzung
