--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -65,10 +65,14 @@ guiOOoChangeLanguageParagraph = Of Paragraph
 guiSelectionCheckComplete = LanguageTool check of selected text is complete.
 guiUserProfile = Default Profile
 guiColorSelectionLabel = Default underline colors
-guiWTColorPallette = WritingTool colors
-guiBlueColorPallette = Blue shades
-guiLTColorPallette = LanguageTool colors
-guiDarkColorPallette = Dark background colors
+guiWTColorPalette = WritingTool colors
+guiBlueColorPalette = Blue shades
+guiLTColorPalette = LanguageTool colors
+guiDarkColorPalette = Dark background colors
+guiCustomColorPalete = Custom colors
+guiCustomColorGrammar = Grammar rules
+guiCustomColorStyle = Style rules
+guiCustomColorOptional = Optional rules
 guiUseLongMessages = Show long messages in context menu
 guiSpellCheckerWarning = Heap space too small: LanguageTool spell checker is not used.\nSet the heap space to at least 1024 MB to use the LanguageTool spell checker
 guiAiSupportSettings = AI Support Settings
