some layout changes for option panel and better documentation

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -64,7 +64,7 @@ guiOOoChangeLanguageMatch = F\u00fcr den unterstrichenen Text
 guiOOoChangeLanguageParagraph = F\u00fcr den Absatz
 guiSelectionCheckComplete = LanguageTool-Pr\u00fcfung des selektierten Textes ist beendet.
 guiUserProfile = Standardprofil
-guiColorSelectionLabel = Standard Unterstreichungsfarben
+guiColorSelectionLabel = Standardfarben
 guiWTColorPalette = WritingTool Farben
 guiBlueColorPalette = Blaue Farbt\u00f6ne
 guiLTColorPalette = LanguageTool Farben
@@ -86,6 +86,8 @@ guiAiShowSmallStylisticChanges = Zeige auch Vorschl\u00e4ge f\u00fcr kleinere st
 guiAiShowAllStylisticChanges = Zeige auch umfangreiche Vorschl\u00e4ge f\u00fcr stilistische \u00c4nderungen (nicht empfohlen)
 guiAiExperimentalHint = HINWEIS: Diese Funktion ist noch sehr experimentell.
 guiAiQualityHint = Die Geschwindigkeit und Qualit\u00e4t der Ergebnisse h\u00e4ngt von der Installation und dem verwendeten Modell ab.
+guiAiInstallationHint = Installationsanleitung für eine lokale KI
+guiAiInstallationButton = Installationsanleitung
 guiAiGrammarErrorColor = Von der KI festgestellte Grammatikfehler 
 guiAiStylisticErrorColor = Von der KI festgestellte stilistische Hinweise 
 guiAiText = Text 
@@ -132,7 +134,7 @@ loAiDialogImgSaveButton = Sichern
 loAiDialogImgInsertButton = Einsetzen
 loAiDialogImgSaveTitle = Speichere Bild in Datei
 loAiDialogImgSaveErrorMsg = Grafikformat nicht unterst\u00fctzt.\nW\u00e4hle alas Dateiendung png, jpg oder gif
-loAiServerConnectionError = Fehler in der Verbindung zum KI-Server. KI-Unterst\u00fctzung wird ausgeschaltet.\n F\u00fcr weitere Details siehe log-Datei. 
+loAiServerConnectionError = Fehler in der Verbindung zum KI-Server. KI-Unterst\u00fctzung wird ausgeschaltet.\n Als Hilfe siehe https://writingtool.org: Men\u00fcpunkt 'Hilfe/Optionen/KI-Unterst\u00fctzung' oder Men\u00fcpunkt 'Hilfe/Installation einer lokalen KI' 
 loAiResultDialogTitle = KI Ergebnis
 loAiResultOverrideButton = \u00dcbernehmen
 loAiTranslationDialogTitle = KI \u00dcbersetzung
