--- a/src/main/resources/org/writingtool/de/URLsBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/URLsBundle_de.properties
@@ -3,8 +3,11 @@
 OptionProfiles = de/hilfe/optionen/profile
 OptionGeneral = de/hilfe/optionen/allgemein
 OptionGrammarAndStyle = de/hilfe/optionen/grammatik-und-stilregeln
+OptionDefaultColors = de/hilfe/optionen/standardfarben
 OptionTechnicalSettings = de/hilfe/optionen/technische-einstellungen
 OptionAiSupport = de/hilfe/optionen/ki-unterstuetzung
+
+localAiInstallation = de/hilfe/installation-einer-lokalen-ki
 
 StatisticalAnalysis = de/hilfe/statistische-analyse
 
