--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -64,7 +64,7 @@ guiOOoChangeLanguageMatch = Of Match
 guiOOoChangeLanguageParagraph = Of Paragraph
 guiSelectionCheckComplete = LanguageTool check of selected text is complete.
 guiUserProfile = Default Profile
-guiColorSelectionLabel = Default underline colors
+guiColorSelectionLabel = Default colors
 guiWTColorPalette = WritingTool colors
 guiBlueColorPalette = Blue shades
 guiLTColorPalette = LanguageTool colors
@@ -86,6 +86,8 @@ guiAiShowSmallStylisticChanges = Also show suggestions for small stylistic chang
 guiAiShowAllStylisticChanges = Also show extensive suggestions for stylistic changes (not recommended)
 guiAiExperimentalHint = NOTE: This feature is still very experimental.
 guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
+guiAiInstallationHint = Installation instructions for a local AI
+guiAiInstallationButton = Installation instructions
 guiAiGrammarErrorColor = AI detected grammar error 
 guiAiStylisticErrorColor = AI detected stylistic hints 
 guiAiText = Text 
@@ -132,7 +134,7 @@ loAiDialogImgSaveButton = Save
 loAiDialogImgInsertButton = Insert
 loAiDialogImgSaveTitle = Save Image to File
 loAiDialogImgSaveErrorMsg = Image format not supported.\nChoose file extension png, jpg or gif
-loAiServerConnectionError = Error connecting to AI server. AI support will be disabled.\n See log file for more details.
+loAiServerConnectionError = Error connecting to AI server. AI support will be disabled.\n For help see https://writingtool.org: menu item 'help/options/AI support settings' or menu item 'help/installation of local AI'
 loAiResultDialogTitle = AI Result
 loAiResultOverrideButton = Copy
 loAiTranslationDialogTitle = AI Translation
