--- a/src/main/resources/org/writingtool/en/URLsBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/URLsBundle_en.properties
@@ -3,8 +3,11 @@
 OptionProfiles = en/help/options/profiles
 OptionGeneral = en/help/options/general
 OptionGrammarAndStyle = en/help/options/grammar-and-style-rules
+OptionDefaultColors = en/help/options/default-colors
 OptionTechnicalSettings = en/help/options/technical-settings
 OptionAiSupport = en/help/options/ai-support-settings
+
+localAiInstallation = en/help/installation-of-a-local-ai
 
 StatisticalAnalysis = en/help/statistical-analysis
 
