themes for dialogs added

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -64,6 +64,9 @@ guiOOoChangeLanguageMatch = F\u00fcr den unterstrichenen Text
 guiOOoChangeLanguageParagraph = F\u00fcr den Absatz
 guiSelectionCheckComplete = LanguageTool-Pr\u00fcfung des selektierten Textes ist beendet.
 guiUserProfile = Standardprofil
+guiUserProfile = Default Profile
+guiColorTabLabel = Farben / Dialogstil
+guiThemeLabel = Dialogstil (Thema)
 guiColorSelectionLabel = Standardfarben
 guiWTColorPalette = WritingTool Farben
 guiBlueColorPalette = Blaue Farbt\u00f6ne
