--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -64,6 +64,8 @@ guiOOoChangeLanguageMatch = Of Match
 guiOOoChangeLanguageParagraph = Of Paragraph
 guiSelectionCheckComplete = LanguageTool check of selected text is complete.
 guiUserProfile = Default Profile
+guiColorTabLabel = Colors / Dialog style
+guiThemeLabel = Dialog style (Theme)
 guiColorSelectionLabel = Default colors
 guiWTColorPalette = WritingTool colors
 guiBlueColorPalette = Blue shades
