Buttons selectAll, DeselectAll and Default added to option panel, solves issue #30

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -153,6 +153,9 @@ guiUTypeWave = Welle
 guiUTypeBoldWave = Fettgedruckte Welle
 guiUTypeBold = Fett
 guiUTypeDash = Gepunktet
+guiSelectAll = Alle ausw\u00e4hlen
+guiDeselectAll = Alle abw\u00e4hlen
+guiDefault = Standard
 is = Isl\u00e4ndisch
 it = Italienisch
 km = Khmer
