--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -152,6 +152,9 @@ guiUTypeWave = Wave
 guiUTypeBoldWave = Bold Wave
 guiUTypeBold = Bold
 guiUTypeDash = Dashed
+guiSelectAll = Select all
+guiDeselectAll = Deselect all
+guiDefault = Default
 is = Icelandic
 it = Italian
 km = Khmer
