--- a/src/main/resources/org/writingtool/hu/URLsBundle_hu.properties
+++ b/src/main/resources/org/writingtool/hu/URLsBundle_hu.properties
@@ -1,15 +1,15 @@
-# Hungarian URLs (Help, Options) of WritingTool
+# English URLs (Help, Options) of WritingTool
 # Copyright (C) 2024 Fred Kruse (https://fk-es.de)
-OptionProfiles = hu/help/options/profiles
-OptionGeneral = hu/help/options/general
-OptionGrammarAndStyle = hu/help/options/grammar-and-style-rules
-OptionDefaultColors = hu/help/options/default-colors
-OptionTechnicalSettings = hu/help/options/technical-settings
-OptionAiSupport = hu/help/options/ai-support-settings
+OptionProfiles = en/help/options/profiles
+OptionGeneral = en/help/options/general
+OptionGrammarAndStyle = en/help/options/grammar-and-style-rules
+OptionDefaultColors = en/help/options/default-colors
+OptionTechnicalSettings = en/help/options/technical-settings
+OptionAiSupport = en/help/options/ai-support-settings
 
-localAiInstallation = hu/help/installation-of-a-local-ai
+localAiInstallation = en/help/installation-of-a-local-ai
 
-StatisticalAnalysis = hu/help/statistical-analysis
+StatisticalAnalysis = en/help/statistical-analysis
 
-AiDialogText = hu/help/ai-dialog/ai-dialog-text
-AiDialogImage = hu/help/ai-dialog/ai-dialog-image
+AiDialogText = en/help/ai-dialog/ai-dialog-text
+AiDialogImage = en/help/ai-dialog/ai-dialog-image
