--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -105,7 +105,7 @@ loMenuAiTranslateCommand = AI: Translate document
 loMenuAiTextToSpeechCommand = AI: document to speech
 loMenuAiGeneralCommandTitle = Command input
 loMenuAiGeneralCommandMessage = Enter any command to manipulate the paragraph
-loAiWaitDialogTitle = Please Wait…
+loAiWaitDialogTitle = Please wait…
 loAiWaitDialogMessage = Please wait until the AI has completed your request.\nThis may take some time depending on the workload.
 loAiRuleDescription = AI error detection
 loAiRuleMessage = The AI suggests the following correction
