--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -222,7 +222,7 @@ loDialogOptionsButtonHelp = Opens the LT options dialog.\nThe Options can be cha
 loDialogUndoButtonHelp = Undoes the last action.\nUp to 20 actions can be undone.
 loDialogCloseButtonHelp = Closes the spell and grammar check dialog.
 loDialogMoreButtonHelp = For grammatical errors only:\nOpens a link in a browser to get advanced information about the error.
-loDialogIgnoreButtonHelp = Ignores the current match\n(The match is ignored till the next change of paragraph).
+loDialogIgnoreButtonHelp = Ignores the current match\n(The match is ignored until the next change of paragraph).
 loDialogIgnoreAllButtonHelp = Ignores all similar matches in the document:\n- For spelling errors: Ignore all words like the misspelled one\n- For grammatical errors: Ignore the rule\nThe words or rules are ignored till the end of the session.
 loDialogIgnorePermanentButtonHelp = Ignores the current match\nThe match is ignored also after reopening the document\nuntil the reset ignore permanent button is clicked.
 loDialogResetIgnorePermanentButtonHelp = The permanent ignored matches will be reset.
