change color management for optional rules

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -89,10 +89,11 @@ guiAiShowSmallStylisticChanges = Zeige auch Vorschl\u00e4ge f\u00fcr kleinere st
 guiAiShowAllStylisticChanges = Zeige auch umfangreiche Vorschl\u00e4ge f\u00fcr stilistische \u00c4nderungen (nicht empfohlen)
 guiAiExperimentalHint = HINWEIS: Diese Funktion ist noch sehr experimentell.
 guiAiQualityHint = Die Geschwindigkeit und Qualit\u00e4t der Ergebnisse h\u00e4ngt von der Installation und dem verwendeten Modell ab.
-guiAiInstallationHint = Installationsanleitung für eine lokale KI
+guiAiInstallationHint = Installationsanleitung f\u00fcr eine lokale KI
 guiAiInstallationButton = Installationsanleitung
 guiAiGrammarErrorColor = Von der KI festgestellte Grammatikfehler 
-guiAiStylisticErrorColor = Von der KI festgestellte stilistische Hinweise 
+guiAiStylisticErrorColor = Von der KI festgestellte stilistische Hinweise
+guiDisabledDefaultRules = Deaktivierte Standardregeln
 guiAiText = Text 
 guiAiImages = Bilder
 guiAiTextToSpeech = Text zu Sprache
