add options to settings, add quote detector, add filter (not ready till now)

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -97,6 +97,8 @@ guiDisabledDefaultRules = Deaktivierte Standardregeln
 guiAiText = Text 
 guiAiImages = Bilder
 guiAiTextToSpeech = Text zu Sprache
+guiNoStyleCheckWithinDirectSpeech = Keine Stilpr\u00fcfung innerhalb w\u00f6rtlicher Rede
+guiNoGrammarCheckWithinDirectSpeech = Auch keine Grammatikpr\u00fcfung innerhalb w\u00f6rtlicher Rede
 loMenuAiSupport = KI Unterst\u00fctzung
 loMenuAiAddErrorMarks = KI: Erkannte Fehler hinzuf\u00fcgen 
 loMenuAiGeneralCommand = KI: Allgemeine Absatz \u00c4nderungen
