--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -95,6 +95,8 @@ guiAiStylisticErrorColor = AI detected stylistic hints
 guiAiText = Text
 guiAiImages = Images
 guiAiTextToSpeech = Text to speech
+guiNoStyleCheckWithinDirectSpeech = No style check within direct speech
+guiNoGrammarCheckWithinDirectSpeech = Also no grammar check within direct speech
 loMenuAiSupport = AI Support
 loMenuAiAddErrorMarks = AI: Add detected errors
 loMenuAiGeneralCommand = AI: General paragraph changes
