--- a/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
+++ b/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
@@ -95,6 +95,8 @@ guiAiStylisticErrorColor = A mesterséges intelligencia stilisztikai tippeket é
 guiAiText = Szöveg 
 guiAiImages = Képek
 guiAiTextToSpeech = Szöveg beszéddé alakítása
+guiNoStyleCheckWithinDirectSpeech = No style check within direct speech
+guiNoGrammarCheckWithinDirectSpeech = Also no grammar check within direct speech
 loMenuAiSupport = Mesterséges intelligencia támogatása
 loMenuAiAddErrorMarks = Mesterséges intelligencia: Észlelt hibák hozzáadása
 loMenuAiGeneralCommand = Mesterséges intelligencia: Általános bekezdésmódosítások
