add first functionality to sidebar

--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -205,12 +205,14 @@ loMenuEnableBackgroundCheck = Enable background check
 loMenuDisableBackgroundCheck = Disable background check
 loMenuChangeProfiles = Change Profile to
 loContextMenuOptions = LanguageTool Options
+loContextMenuNextError = Next Error
 loContextMenuRenewMarkups = Renew grammar markups
 loContextMenuDeactivateRule = Deactivate Rule
 loContextMenuIgnorePermanent = Ignore Permanent
 loContextMenuActivateRule = Activate Rule
 loContextMenuAddToDictionary = Add to Dictionary
 loContextMenuGrammarCheck = Grammar Check…
+loContextMenuGrammarCheckAgain = Grammar Check again
 loContextMenuRefreshCheck = Refresh Check Results
 loContextMenuAbout = About
 loDialogLanguageHelp = The language of the paragraph shown in the editor element is displayed.\nIf you want to change the language of the underlined match or the whole paragraph, choose the new language first.\nAfter a new language is selected the “Change Language” button will be activated.
