--- a/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
+++ b/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
@@ -205,12 +205,14 @@ loMenuEnableBackgroundCheck = Háttérellenőrzés engedélyezése
 loMenuDisableBackgroundCheck = Háttérellenőrzés letiltása
 loMenuChangeProfiles = Profil módosítása erre:
 loContextMenuOptions = Nyelveszköz beállításai
+loContextMenuNextError = Next Error
 loContextMenuRenewMarkups = Nyelvtani jelölések megújítása
 loContextMenuDeactivateRule = Szabály kikapcsolása
 loContextMenuIgnorePermanent = Az állandó figyelmen kívül hagyása
 loContextMenuActivateRule = Szabály aktiválása
 loContextMenuAddToDictionary = Hozzáadás a szótárhoz
 loContextMenuGrammarCheck = Nyelvtani ellenőrzés…
+loContextMenuGrammarCheckAgain = Grammar Check again
 loContextMenuRefreshCheck = Eredmények ellenőrzések frissítése
 loContextMenuAbout = Névjegy
 loDialogLanguageHelp = Megjelenik a szerkesztő elemben megjelenő bekezdés nyelve.\nHa módosítani szeretné az aláhúzott egyezés vagy a teljes bekezdés nyelvét, először válassza ki az új nyelvet.\nMiután a "Nyelv módosítása" gombban új nyelvet jelölt ki aktiválódik.
