--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -215,8 +215,10 @@ loContextMenuIgnorePermanent = Dauerhaft ignorieren
 loContextMenuActivateRule = Regel aktivieren
 loContextMenuAddToDictionary = Zum W\u00f6rterbuch hinzuf\u00fcgen
 loContextMenuGrammarCheck = Grammatikpr\u00fcfung…
+loContextMenuGrammarCheckAgain = Grammatik erneut pr\u00fcfen
 loContextMenuRefreshCheck = Pr\u00fcfergebnisse aktualisieren
 loContextMenuAbout = \u00dcber
+loContextMenuNextError = N\u00e4chster Fehler
 loDialogLanguageHelp = Die Sprache des im Editor-Element angezeigten Absatzes wird angezeigt.\nWenn Sie die Sprache des unterstrichenen Fehlers oder des gesamten Absatzes \u00e4ndern m\u00f6chten, w\u00e4hlen Sie zun\u00e4chst die neue Sprache aus.\nNachdem eine neue Sprache ausgew\u00e4hlt wurde, wird die Schaltfl\u00e4che "Sprache \u00e4ndern" aktiviert.
 loDialogChangeLanguageHelp = Die Liste wird aktiviert, nachdem eine neue Sprache ausgew\u00e4hlt wurde. \nKlicken Sie auf die Liste, um zu w\u00e4hlen: \n - die Sprache der \u00dcbereinstimmung zu \u00e4ndern (im Editor-Element unterstrichen) \n - den gesamten Absatz
 loDialogMatchDescriptionHelp = Zeigt eine Beschreibung des von der Pr\u00fcfung gefundenen Fehlers.
