sidebar: add some more buttons and functions

--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -270,4 +270,5 @@ loStatisticalAnalysisResetIgnoredWordsButton = Reset ignored words
 loStatisticalAnalysisEntireDocument = Entire document
 loStatisticalAnalysisNotAnalyzed = Not analyzed
 loStatisticalAnalysisNumber = Number
+loSidebarParagraphLabel = Current Paragraph (Matches in [])
 crh = Crimean Tatar
