--- a/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
+++ b/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
@@ -270,4 +270,5 @@ loStatisticalAnalysisResetIgnoredWordsButton = A figyelmen kívül hagyott szava
 loStatisticalAnalysisEntireDocument = A teljes dokumentum
 loStatisticalAnalysisNotAnalyzed = Nem elemzett
 loStatisticalAnalysisNumber = Szám
+loSidebarParagraphLabel = Current Paragraph (Matches in [])
 crh = krími tatár
