--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -274,4 +274,5 @@ loStatisticalAnalysisResetIgnoredWordsButton = Ignorierte W\u00f6rter zur\u00fcc
 loStatisticalAnalysisEntireDocument = Ganzes Dokument
 loStatisticalAnalysisNotAnalyzed = Nicht analysiert
 loStatisticalAnalysisNumber = Anzahl
+loSidebarParagraphLabel = Aktueller Absatz (Treffer in [])
 crh = Krimtatar
