add suggestion for reformulate paragraph to sidebar

--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -86,6 +86,7 @@ guiAiAutoCorrect = Enable automatic Error detection
 guiAiShowNoStylisticChanges = Show only grammatical and orthographic Hints
 guiAiShowSmallStylisticChanges = Also show suggestions for small stylistic changes
 guiAiShowAllStylisticChanges = Also show extensive suggestions for stylistic changes (not recommended)
+guiAiShowStylisticSuggestion = Show suggestion for stylistic rewriting of paragraph in sidebar
 guiAiExperimentalHint = NOTE: This feature is still very experimental.
 guiAiQualityHint = The speed and quality of the results depends on the installation and model used.
 guiAiInstallationHint = Installation instructions for a local AI
