--- a/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
+++ b/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
@@ -86,6 +86,7 @@ guiAiAutoCorrect = Automatikus hibaérzékelés engedélyezése
 guiAiShowNoStylisticChanges = Csak nyelvtani és helyesírási tippének megjelenítése
 guiAiShowSmallStylisticChanges = Apró stilisztikai változtatásokra vonatkozó javaslatokat is jelenítsen meg
 guiAiShowAllStylisticChanges = Kiterjedt stílusmódosítási javaslatok megjelenítése (nem ajánlott)
+guiAiShowStylisticSuggestion = Show suggestion for stylistic rewriting of paragraph in sidebar
 guiAiExperimentalHint = MEGJEGYZÉS: Ez a szolgáltatás még nagyon kísérleti jellegű.
 guiAiQualityHint = Az eredmények sebessége és minősége a telepítéstől és az alkalmazott modelltől függ.
 guiAiInstallationHint = Telepítési utasítások helyi mesterséges intelligencia számára
