--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -87,6 +87,7 @@ guiAiAutoCorrect = Automatische Fehler Erkennung
 guiAiShowNoStylisticChanges = Zeige nur grammatische und orthographische Hinweise
 guiAiShowSmallStylisticChanges = Zeige auch Vorschl\u00e4ge f\u00fcr kleinere stilistische \u00c4nderungen
 guiAiShowAllStylisticChanges = Zeige auch umfangreiche Vorschl\u00e4ge f\u00fcr stilistische \u00c4nderungen (nicht empfohlen)
+guiAiShowStylisticSuggestion = Zeige Vorschlag zum stilistischen Umschreiben des Absatzes im Sidebar
 guiAiExperimentalHint = HINWEIS: Diese Funktion ist noch sehr experimentell.
 guiAiQualityHint = Die Geschwindigkeit und Qualit\u00e4t der Ergebnisse h\u00e4ngt von der Installation und dem verwendeten Modell ab.
 guiAiInstallationHint = Installationsanleitung f\u00fcr eine lokale KI
