AI support: bug fix, more differentiated messages

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -114,6 +114,12 @@ loAiWaitDialogTitle = Bitte warten
 loAiWaitDialogMessage = Bitte warten Sie, bis die KI Ihre Anfrage bearbeitet hat.\nDies kann je nach Arbeitslast einige Zeit in Anspruch nehmen.
 loAiRuleDescription = KI Fehler Erkennung
 loAiRuleMessage = Die KI schl\u00e4gt folgende Korrektur vor
+loAiRuleMessageOtherPunctuation = KI: falsches Satzzeichen
+loAiRuleMessageMissingPunctuation = KI: fehlendes Satzzeichen
+loAiRuleMessageUnnecessaryPunctuation = KI: \u00fcberfl\u00fcssiges Satzzeichen
+loAiRuleMessageGrammar = KI: Grammatikfehler
+loAiRuleMessageWordConfusion = KI: Wortverwechselung
+loAiRuleMessageMisspelling = KI: Rechtschreibfehler
 loAiDialogTitle = KI Dialog
 loAiDialogTabParagraph = Absatzbearbeitung
 loAiDialogTabInstruction = Direkte Anweisung
