--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -112,6 +112,12 @@ loAiWaitDialogTitle = Please wait…
 loAiWaitDialogMessage = Please wait until the AI has completed your request.\nThis may take some time depending on the workload.
 loAiRuleDescription = AI error detection
 loAiRuleMessage = The AI suggests the following correction
+loAiRuleMessageOtherPunctuation = AI: wrong punctuation
+loAiRuleMessageMissingPunctuation = AI: missing punctuation
+loAiRuleMessageUnnecessaryPunctuation = AI: unnecessary punctuation
+loAiRuleMessageGrammar = AI: grammar error
+loAiRuleMessageWordConfusion = AI: word confusion
+loAiRuleMessageMisspelling = AI: misspelling
 loAiDialogTitle = AI Dialog
 loAiDialogTabParagraph = Paragraph editing
 loAiDialogTabInstruction = Direct instruction
