--- a/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
+++ b/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
@@ -112,6 +112,12 @@ loAiWaitDialogTitle = Kérjük, várjon…
 loAiWaitDialogMessage = Kérjük, várja meg, amíg a mesterséges intelligencia végrehajtja a kérését.\nEz a munkaterheléstől függően eltarthat egy ideig.
 loAiRuleDescription = Mesterséges intelligencia hiba észlelése
 loAiRuleMessage = A mesterséges intelligencia a következő javítást javasolja
+loAiRuleMessageOtherPunctuation = AI: wrong punctuation
+loAiRuleMessageMissingPunctuation = AI: missing punctuation
+loAiRuleMessageUnnecessaryPunctuation = AI: unnecessary punctuation
+loAiRuleMessageGrammar = AI: grammar error
+loAiRuleMessageWordConfusion = AI: word confusion
+loAiRuleMessageMisspelling = AI: misspelling
 loAiDialogTitle = Mesterséges intelligencia párbeszéd
 loAiDialogTabParagraph = Bekezdésszerkesztés
 loAiDialogTabInstruction = Közvetlen utasítás
