ai support: sidebar optimization

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -125,7 +125,11 @@ loAiDialogTabParagraph = Absatzbearbeitung
 loAiDialogTabInstruction = Direkte Anweisung
 loAiDialogInstructionLabel = Anweisung
 loAiDialogParagraphLabel = Zu bearbeitender Text
-loAiDialogResultLabel = KI generierter Text
+loAiDialogResultLabel = KI: generierter Text
+loAiDialogResultLabelGrammar = KI: grammatisch überarbeiteter Text
+loAiDialogResultLabelStyle = KI: stilistisch überarbeiteter Text
+loAiDialogResultLabelRephrase = KI: umformulierter Text
+loAiDialogResultLabelExpand = KI: erweiteter Text
 loAiDialogCreativityLabel = KI Kreativit\u00e4t (temperature * 100)
 loAiDialogExecuteButton = F\u00fchre Anweisung aus
 loAiDialogcopyResultButton = Kopiere Ergebnis
