--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -123,7 +123,11 @@ loAiDialogTabParagraph = Paragraph editing
 loAiDialogTabInstruction = Direct instruction
 loAiDialogInstructionLabel = Instruction
 loAiDialogParagraphLabel = Text to be edited
-loAiDialogResultLabel = AI generated text
+loAiDialogResultLabel = AI: Generated text
+loAiDialogResultLabelGrammar = AI: Grammatically revised text
+loAiDialogResultLabelStyle = AI: Stylistically revised text
+loAiDialogResultLabelRephrase = AI: Reformulated text
+loAiDialogResultLabelExpand = AI: Expanded text
 loAiDialogCreativityLabel = AI Creativity (temperature × 100)
 loAiDialogExecuteButton = Execute instruction
 loAiDialogcopyResultButton = Copy Result
