--- a/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
+++ b/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
@@ -124,6 +124,10 @@ loAiDialogTabInstruction = Közvetlen utasítás
 loAiDialogInstructionLabel = Utasítás
 loAiDialogParagraphLabel = Szerkesztendő szöveg
 loAiDialogResultLabel = Mesterséges intelligencia által generált szöveg
+loAiDialogResultLabelGrammar = AI: Grammatically revised text
+loAiDialogResultLabelStyle = AI: Stylistically revised text
+loAiDialogResultLabelRephrase = AI: Reformulated text
+loAiDialogResultLabelExpand = AI: Expanded text
 loAiDialogCreativityLabel = Mesterséges intelligencia kreativitás (hőmérséklet × 100)
 loAiDialogExecuteButton = Utasítás végrehajtása
 loAiDialogcopyResultButton = Eredmény másolása
