another small optimizations

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -197,7 +197,7 @@ pt-MZ = Portugiesisch (Mosambik, vor Reform)
 pt-PT = Portugiesisch (Portugal, vor Reform)
 ja = Japanisch
 language_not_supported = Fehler: Die Dokumentsprache "{0}" wird von LanguageTool nicht unterst\u00fctzt.
-guiMore = Mehr…
+guiMore = Mehr
 guiUndo = R\u00fcckg\u00e4ngig
 ruleDetailsLink = Mehr zur Regel auf community.languagetool.org
 ta = Tamil
